--- a/css/global.css
+++ b/css/global.css
@@ -923,4 +923,81 @@ h1 {
   border-radius: 50%;
   border-top-color: #b2b2b2;
 }
+
+.about-contaioner .about-container-top-wrapper {
+  width: 100%;
+  height: 60vh;
+  background: #3571a3;
+}
+
+.about-contaioner .about-container-top-wrapper .about-container-top {
+  height: 100%;
+  width: 85%;
+  margin: 5rem auto 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fdfdff;
+}
+
+.about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-about h2 {
+  font-size: 35px;
+  font-family: 'BPG Banner Caps';
+  margin: 0 0 1.5rem 0;
+}
+
+.about-contaioner .about-container-top-wrapper .about-container-top .about-container-top-about p {
+  font-family: 'DejaVu Sans';
+  font-size: 18px;
+  margin: 0 0 3rem 0;
+}
+
+.about-contaioner .about-container-top-wrapper .about-container-top-goal h2 {
+  font-size: 35px;
+  font-family: 'BPG Banner Caps';
+  margin: 0 0 1.5rem 0;
+}
+
+.about-contaioner .about-container-top-wrapper .about-container-top-goal p {
+  font-family: 'DejaVu Sans';
+  font-size: 18px;
+}
+
+.about-contaioner .about-container-bottom-wrapper {
+  background: #fed142;
+}
+
+.about-contaioner .about-container-bottom-wrapper .about-container-bottom {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.about-contaioner .about-container-bottom-wrapper .about-container-bottom h2 {
+  padding: 3rem 0 5rem 0;
+  font-size: 35px;
+  font-family: 'BPG Banner Caps';
+}
+
+.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info {
+  min-height: 70vh;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 2rem;
+}
+
+.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info {
+  width: 100%;
+  height: 100%;
+}
+
+.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info h4 {
+  font-family: 'DejaVu Sans';
+  font-size: 24px;
+}
+
+.about-contaioner .about-container-bottom-wrapper .about-container-bottom .about-container-bottom-team-info .team-info p {
+  font-family: 'DejaVu Sans';
+  font-size: 18px;
+  margin: 1rem 0 0 0;
+}
 /*# sourceMappingURL=global.css.map */
