--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -233,6 +233,7 @@ h1 {
         font-weight: bold;
         align-self: center;
         margin-bottom: 2rem;
+        font-family: 'BPG Nino Mtavruli';
       }
       .msg-wrapper {
         display: flex;
@@ -456,6 +457,7 @@ h1 {
       color: $primaryColor;
       text-align: center;
       margin: 2rem auto;
+      font-family: 'BPG Nino Mtavruli';
     }
     h2 {
       font-size: 36px;
@@ -494,6 +496,7 @@ h1 {
       line-height: 21px;
       font-weight: bold;
       color: $darkBlack;
+      font-family: 'BPG Nino Mtavruli';
     }
     p {
       color: $lightBlack;
@@ -581,6 +584,7 @@ h1 {
         color: #9191a0;
         margin-bottom: 0;
         font-size: 13px;
+        font-family: 'BPG Nino Mtavruli';
       }
       input,
       select {
@@ -631,6 +635,7 @@ h1 {
           margin: 1rem auto;
           padding: 0.8rem 1.8rem;
           cursor: pointer;
+          font-family: 'BPG Nino Mtavruli';
         }
       }
     }
