Add setting.Json / Change Scss structure.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,4 +2,10 @@
 @import "./fonts";
 @import "./variables";
 @import "./mixins";
-@import "./styles";
+@import "./mainStyles";
+@import "./aboutStyle";
+@import "./authStyles";
+@import "./header";
+@import "./not-foundStyles";
+@import "./contactStyles";
+@import "./footerStyles";
