--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -12,3 +12,4 @@ $lightGray: #b2b2b2;
 $darkGray: #929292;
 $errorMessage: #ff7474;
 $successMessage: #bdd36e;
+$greenBackground: rgba(98, 189, 79, 1);
