--- a/css/global.css
+++ b/css/global.css
@@ -201,8 +201,8 @@ h1 {
   font-size: 25px;
   cursor: pointer;
 }
-.container .sorting button:focus {
-  border: none;
+.container .sorting .borderActive {
+  border-bottom: 5px solid #3571a3;
 }
 .container .filter-container {
   margin: 2rem 0;
@@ -275,23 +275,64 @@ h1 {
 }
 .container .grid-container .card {
   border: 1px solid #707070;
+  width: 250px;
+  height: 250px;
   padding: 10px 15px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
+}
+.container .grid-container .card:hover {
+  background-color: rgba(53, 113, 163, 0.2);
 }
 .container .grid-container .card p {
+  display: flex;
   font-size: 13px;
   font-weight: bold;
   color: black;
+  width: 100%;
+  height: 100px;
+}
+.container .grid-container .card .checkSign {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  text-align: center;
+  margin: 10px 10px 0px 0px;
+}
+.container .grid-container .card .checkSign span {
+  display: flex;
+  text-align: center;
+  background-color: rgb(98, 189, 79);
+  color: #ffffff;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 11px;
+}
+.container .grid-container .card .nonCheckSign {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  text-align: center;
+  margin: 10px 10px 0px 0px;
+}
+.container .grid-container .card .nonCheckSign span {
+  display: flex;
+  text-align: center;
+  color: #433f3f;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px;
 }
 .container .grid-container .card img {
-  margin: 2rem auto 1rem auto;
+  margin: 1rem auto 1rem auto;
 }
 .container .grid-container .card .tags-container {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -987,6 +1028,9 @@ header nav .nav-links {
 header nav .nav-links li a {
   color: #000000;
   font-size: 17px;
+}
+header nav .nav-links li a:hover {
+  color: #3571a3;
 }
 
 footer {
